--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,6 @@ doctype html
 html
   include ./head.pug
   body
-    h1 My Site
-    p Welcome to my super lame site.
+    h1 Sitio de ejemplo
+    p Bienvenido al ejemplo
     include ./foot.pug
